{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 269,
  "lineage": "a65649db-3bfa-a12b-3e9c-e978d68ef896",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279865790913:security-group/sg-0431a26bfa599c159",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0431a26bfa599c159",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16",
                  "21.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20201210200347407200000008",
            "name_prefix": "all_worker_management",
            "owner_id": "279865790913",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b27143141d4d2d5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279865790913:security-group/sg-06a50f5c58175873f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06a50f5c58175873f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "21.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20201210200347405500000007",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "279865790913",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b27143141d4d2d5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279865790913:security-group/sg-0de6d05f9172c6b66",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0de6d05f9172c6b66",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16",
                  "21.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20201210200347416400000009",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "279865790913",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b27143141d4d2d5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress",
      "name": "example_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/example-ingress",
            "load_balancer_ingress": [],
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "example-ingress",
                "namespace": "default",
                "resource_version": "140675",
                "self_link": "/apis/extensions/v1beta1/namespaces/default/ingresses/example-ingress",
                "uid": "41932d44-854b-4751-886d-95653c89ccdd"
              }
            ],
            "spec": [
              {
                "backend": [
                  {
                    "service_name": "appone",
                    "service_port": "8080"
                  }
                ],
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "service_name": "appone",
                                "service_port": "8080"
                              }
                            ],
                            "path": "/app1/*"
                          },
                          {
                            "backend": [
                              {
                                "service_name": "apptwo",
                                "service_port": "8080"
                              }
                            ],
                            "path": "/app2/*"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": [
                  {
                    "hosts": null,
                    "secret_name": "tls-secret"
                  }
                ]
              }
            ],
            "wait_for_load_balancer": false
          },
          "dependencies": [
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/nginx-service",
            "load_balancer_ingress": [
              {
                "hostname": "a6f695f777f4b45a79634a2e9e82dc29-1750481247.us-east-2.elb.amazonaws.com"
              }
            ],
            "metadata": [
              {
                "generation": 0,
                "name": "nginx-service",
                "namespace": "default",
                "resource_version": "139189",
                "self_link": "/api/v1/namespaces/default/services/nginx-service",
                "uid": "6f695f77-7f4b-45a7-9634-a2e9e82dc297"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.100.153.132",
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 30479,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "nginx"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ]
          },
          "dependencies": [
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster",
            "kubernetes_deployment.nginx"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279865790913:security-group/sg-08fb4b27a801f5289",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fb4b27a801f5289",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-047889cf098e87ba5"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-tfcltr2020121020035173710000000b",
            "name_prefix": "eks-tfcltr",
            "owner_id": "279865790913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "qa",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "eks-tfcltr-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b27143141d4d2d5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279865790913:security-group/sg-047889cf098e87ba5",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047889cf098e87ba5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-000c3132dd45da888"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08fb4b27a801f5289"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08fb4b27a801f5289"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks-tfcltr2020121020035118310000000a",
            "name_prefix": "eks-tfcltr",
            "owner_id": "279865790913",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "qa",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "eks-tfcltr-eks_worker_sg",
              "kubernetes.io/cluster/eks-tfcltr": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b27143141d4d2d5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1331143023",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08fb4b27a801f5289",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3851432215",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08fb4b27a801f5289",
            "self": false,
            "source_security_group_id": "sg-047889cf098e87ba5",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2880002585",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-047889cf098e87ba5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-621070806",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-047889cf098e87ba5",
            "self": false,
            "source_security_group_id": "sg-08fb4b27a801f5289",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2871332303",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-047889cf098e87ba5",
            "self": false,
            "source_security_group_id": "sg-08fb4b27a801f5289",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2924223870",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-047889cf098e87ba5",
            "self": false,
            "source_security_group_id": "sg-047889cf098e87ba5",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-034f6c60f51f0904c",
            "domain": "vpc",
            "id": "eipalloc-0e2fe19b092902f51",
            "network_border_group": "us-east-2",
            "network_interface": "eni-04589e682cc621799",
            "private_dns": "ip-21-0-4-182.us-east-2.compute.internal",
            "private_ip": "21.0.4.182",
            "public_dns": "ec2-3-133-168-85.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.168.85",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "qa-vpc-us-east-2a",
              "kubernetes.io/cluster/eks-tfcltr": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279865790913:internet-gateway/igw-0f506ec2f9af0ee7c",
            "id": "igw-0f506ec2f9af0ee7c",
            "owner_id": "279865790913",
            "tags": {
              "Name": "qa-vpc",
              "kubernetes.io/cluster/eks-tfcltr": "shared"
            },
            "vpc_id": "vpc-0b27143141d4d2d5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e2fe19b092902f51",
            "id": "nat-0c163e73ada6f9468",
            "network_interface_id": "eni-04589e682cc621799",
            "private_ip": "21.0.4.182",
            "public_ip": "3.133.168.85",
            "subnet_id": "subnet-05dac0b4f50e76df5",
            "tags": {
              "Name": "qa-vpc-us-east-2a",
              "kubernetes.io/cluster/eks-tfcltr": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01457a78e7c33bc6c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c163e73ada6f9468",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01457a78e7c33bc6c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f506ec2f9af0ee7c",
            "id": "r-rtb-093fa94c6381fa40f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-093fa94c6381fa40f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01457a78e7c33bc6c",
            "owner_id": "279865790913",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c163e73ada6f9468",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "qa-vpc-private",
              "kubernetes.io/cluster/eks-tfcltr": "shared"
            },
            "vpc_id": "vpc-0b27143141d4d2d5c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-093fa94c6381fa40f",
            "owner_id": "279865790913",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f506ec2f9af0ee7c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "qa-vpc-public",
              "kubernetes.io/cluster/eks-tfcltr": "shared"
            },
            "vpc_id": "vpc-0b27143141d4d2d5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfcfef03876edbd2",
            "route_table_id": "rtb-01457a78e7c33bc6c",
            "subnet_id": "subnet-08b85c6a7c3719ae6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047dc5ab9d1355213",
            "route_table_id": "rtb-01457a78e7c33bc6c",
            "subnet_id": "subnet-091e82d892f7661e9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e7a270101bd7a90",
            "route_table_id": "rtb-01457a78e7c33bc6c",
            "subnet_id": "subnet-026e9686434a000d7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0d7043db3f75c2f",
            "route_table_id": "rtb-093fa94c6381fa40f",
            "subnet_id": "subnet-05dac0b4f50e76df5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015816f711a58539f",
            "route_table_id": "rtb-093fa94c6381fa40f",
            "subnet_id": "subnet-0ada6d6735f95833d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d9511e6051961af",
            "route_table_id": "rtb-093fa94c6381fa40f",
            "subnet_id": "subnet-0d6902c6881dae7eb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279865790913:subnet/subnet-08b85c6a7c3719ae6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "21.0.1.0/24",
            "id": "subnet-08b85c6a7c3719ae6",
            "map_public_ip_on_launch": false,
            "owner_id": "279865790913",
            "tags": {
              "Name": "qa-vpc-private-us-east-2a",
              "kubernetes.io/cluster/eks-tfcltr": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b27143141d4d2d5c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279865790913:subnet/subnet-091e82d892f7661e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "21.0.2.0/24",
            "id": "subnet-091e82d892f7661e9",
            "map_public_ip_on_launch": false,
            "owner_id": "279865790913",
            "tags": {
              "Name": "qa-vpc-private-us-east-2b",
              "kubernetes.io/cluster/eks-tfcltr": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b27143141d4d2d5c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279865790913:subnet/subnet-026e9686434a000d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "21.0.3.0/24",
            "id": "subnet-026e9686434a000d7",
            "map_public_ip_on_launch": false,
            "owner_id": "279865790913",
            "tags": {
              "Name": "qa-vpc-private-us-east-2c",
              "kubernetes.io/cluster/eks-tfcltr": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b27143141d4d2d5c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279865790913:subnet/subnet-05dac0b4f50e76df5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "21.0.4.0/24",
            "id": "subnet-05dac0b4f50e76df5",
            "map_public_ip_on_launch": true,
            "owner_id": "279865790913",
            "tags": {
              "Name": "qa-vpc-public-us-east-2a",
              "kubernetes.io/cluster/eks-tfcltr": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b27143141d4d2d5c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279865790913:subnet/subnet-0ada6d6735f95833d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "21.0.5.0/24",
            "id": "subnet-0ada6d6735f95833d",
            "map_public_ip_on_launch": true,
            "owner_id": "279865790913",
            "tags": {
              "Name": "qa-vpc-public-us-east-2b",
              "kubernetes.io/cluster/eks-tfcltr": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b27143141d4d2d5c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279865790913:subnet/subnet-0d6902c6881dae7eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "21.0.6.0/24",
            "id": "subnet-0d6902c6881dae7eb",
            "map_public_ip_on_launch": true,
            "owner_id": "279865790913",
            "tags": {
              "Name": "qa-vpc-public-us-east-2c",
              "kubernetes.io/cluster/eks-tfcltr": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b27143141d4d2d5c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:279865790913:vpc/vpc-0b27143141d4d2d5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "21.0.0.0/16",
            "default_network_acl_id": "acl-08c770265e3045bc9",
            "default_route_table_id": "rtb-0f432af1ae316df3c",
            "default_security_group_id": "sg-0bf32001c5efcf7a5",
            "dhcp_options_id": "dopt-25adb04d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b27143141d4d2d5c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f432af1ae316df3c",
            "owner_id": "279865790913",
            "tags": {
              "Name": "qa-vpc",
              "kubernetes.io/cluster/eks-tfcltr": "shared"
            }
          }
        }
      ]
    }
  ]
}